# dirmap

./: CMakeLists.txt  build.sh  main.cpp
src/: CMakeLists.txt  directory.cpp  directory.h
